@@ -1,0 +1,11 @@
+use strict;
+use warnings;
+use SPVM::Builder::Config;
+
+my $config = SPVM::Builder::Config->new_gnu99(file => __FILE__);
+
+if ($^O eq 'MSWin32') {
+  $config->add_libs('wsock32', 'ws2_32');
+}
+
+$config;
